--- a/index.html
+++ b/index.html
@@ -372,7 +372,7 @@
 							</div>
 							<div class="content">
 								<p>
-									 This was my first time using Fiverr, and Abul Khair made the whole process very smooth. He took the time to clearly understand my requirements, was extremely friendly, and kept me updated throughout the project. I really enjoyed working with him and would happily do so again.
+									 This was my first time using Fiverr, and Abul Khair made the whole process very smooth. He took the time to clearly understand my requirements, was extremely friendly.
 								</p>
 							</div>
 						</div>
@@ -401,7 +401,7 @@
 							</div>
 							<div class="content">
 								<p>
-									As a first-time Fiverr user, I had a great experience working with Abul Khair. He made sure to clarify the project brief before starting and maintained clear communication throughout. His friendly attitude and regular updates made everything easy. I would definitely work with him again.
+									As a first-time Fiverr user, I had a great experience working with Abul Khair. He made sure to clarify the project brief before starting and maintained clear communication throughout. His friendly attitude and regular updates made everything easy.
 								</p>
 							</div>
 						</div>
@@ -430,7 +430,7 @@
 							</div>
 							<div class="content">
 								<p>
-									Being new to Fiverr, I wasn’t sure what to expect, but Abul Khair made everything simple and stress-free. He was friendly, asked the right questions to understand my needs, and kept me informed at every stage. I’d absolutely work with him again.
+									Being new to Fiverr, I wasn’t sure what to expect, but Abul Khair made everything simple and stress-free. He was friendly, asked the right questions to understand my needs.
 								</p>
 							</div>
 						</div>
@@ -459,7 +459,7 @@
 							</div>
 							<div class="content">
 								<p>
-									This was my first Fiverr order, and Abul Khair made it a very positive experience. He carefully clarified the brief, communicated clearly, and was friendly throughout the entire process. I felt confident working with him and will definitely return for future projects.
+									This was my first Fiverr order, and Abul Khair made it a very positive experience. He carefully clarified the brief, communicated clearly, and was friendly throughout the entire process.
 								</p>
 							</div>
 						</div>
@@ -488,7 +488,7 @@
 							</div>
 							<div class="content">
 								<p>
-									My first Fiverr experience couldn’t have been better thanks to Abul Khair. He was friendly, took time to understand the brief, and kept me updated along the way. I’m very happy with the experience and would gladly work with him again.
+									My first Fiverr experience couldn’t have been better thanks to Abul Khair. He was friendly, took time to understand the brief, and kept me updated along the way. I’m very happy with the experience.
 								</p>
 							</div>
 						</div>
@@ -1582,3 +1582,4 @@
 
 
 </html>
+
