--- a/index.html
+++ b/index.html
@@ -372,7 +372,7 @@
 							</div>
 							<div class="content">
 								<p>
-									 This was my first time using Fiverr, and Abul Khair made the whole process very smooth. He took the time to clearly understand my requirements, was extremely friendly.
+									 This was my first time using Fiverr, and Abul Khair made the whole process very smooth. He took the time to clearly understand my requirements, was extremely friendly. I will definitely work with him again.
 								</p>
 							</div>
 						</div>
@@ -1582,4 +1582,5 @@
 
 
 </html>
+
 
