--- a/index.html
+++ b/index.html
@@ -401,7 +401,7 @@
 							</div>
 							<div class="content">
 								<p>
-									As a first-time Fiverr user, I had a great experience working with Abul Khair. He made sure to clarify the project brief before starting and maintained clear communication throughout. His friendly attitude and regular updates made everything easy.
+									As a first-time Fiverr user, I had a great experience working with Abul Khair. He made sure to clarify the project brief before starting and maintained clear communication throughout. I like his friendly attitude.
 								</p>
 							</div>
 						</div>
@@ -1582,5 +1582,6 @@
 
 
 </html>
+
 
 
